@@ -1,3 +1,9 @@
+2005-01-01  Bruno Haible  <bruno@clisp.org>
+
+	* condition.lisp (maybe-continue): Ignore the CONTINUE restart if it
+	is not meaningful: In a handler, it's better to decline than to call
+	invoke-debugger.
+
 2005-01-13  Sam Steingold  <sds@gnu.org>
 
 	* compiler.lisp: use STRING-CONCAT instead of (CONCATENATE 'STRING)
